public enum Difficulty {
    BEGINNER, INTERMEDIATE, ADVANCED
}
